<resources>
    <string name="app_name">NoteMe-App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">NoteMe</string>
    <string name="second_fragment_label">New Note</string>
    <string name="next">Next</string>
    <string name="back">Back</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_note">add new note</string>
    <string name="done">Done</string>
    <string name="subtitle">Subtitle</string>
    <string name="title">Title</string>
    <string name="type_notes">Type notes here</string>
    <string name="search_notes">search notes</string>
    <string name="title_view">Title</string>
    <string name="subtitle_view">Subtitle</string>
    <string name="note_context_view">Note Context</string>
    <string name="search">Search</string>
    <string name="pick_your_colour">pick your colour</string>

    <string-array name="dropDrownMenu" >
        <item> Pick a color for your note </item>
        <item> Yellow </item>
        <item> Red </item>
        <item> Orange </item>
        <item> Pink </item>
    </string-array>
</resources>