<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/backgroundCard"
    android:layout_width="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    app:cardCornerRadius="15dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/rel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null">

        <TextView
            android:id="@+id/viewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_below="@+id/image_selected_view"
            android:gravity="center_vertical"
            android:text="@string/title_view"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_selected_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="true"
            android:elevation="5dp"
            android:fadingEdge="horizontal" />
        <TextView
            android:id="@+id/viewSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewTitle"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/subtitle_view"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewNote_context"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewSubtitle"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"

            android:text="@string/note_context_view"
            android:textSize="16sp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>